--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,75 @@
+/* mobile-------------------------- */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
+background: linear-gradient(to top, #fbc2eb 0%, #a18cd1 100%);
+}
+.container {
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+}
+.form-content {
+    background-color: black;
+}
+input {
+   width: 100%;
+   background: transparent;
+   border-bottom: 1px solid #333;
+   padding: .5em;
+}
+img {
+    width: 200px;
+}
+h4{
+    color: white;
+    font-size: small;
+    text-align: center;
+}
+.form-wrapper {
+    display: flex;
+    background-color: black;
+}
+.contact-form {
+   max-width: 600px;
+   margin: auto;
+}
+.contact-form-text {
+    color: gray;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 8px 0;
+}
+.contact-form-button {
+    background-color: chartreuse;
+    color: white;
+    border-radius: 40px;
+    font-size: 8px;
+    padding: 8px;
+}
 
-/*  Put your CSS Here */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* desktop style------------------(widths bigger than 550) */
+@media (min-width: 550px) {
+
+}
